--- a/surfit/vc8/surfit.vcproj
+++ b/surfit/vc8/surfit.vcproj
@@ -147,16 +147,19 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Gs /Gs "
-				Optimization="2"
+				Optimization="3"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
+				OmitFramePointers="true"
 				WholeProgramOptimization="true"
 				AdditionalIncludeDirectories="../src/sstuff,../src/sstuff/ptypes,C:\Tcl\include\"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;_CRT_SECURE_NO_DEPRECATE"
 				StringPooling="true"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
+				EnableEnhancedInstructionSet="1"
+				FloatingPointModel="0"
 				RuntimeTypeInfo="true"
 				PrecompiledHeaderFile=".\../Release/surfit.pch"
 				AssemblerListingLocation=".\../Release/"
